# backend/internal/api/handlers.go
@@ -1,0 +1,11 @@
+package api
+
+import (
+	"net/http"
+	"ws-json-rpc/backend/pkg/apitypes"
+)
+
+func (s *Server) Ping(w http.ResponseWriter, r *http.Request) error {
+	RespondJSON(w, r, 200, apitypes.PingResponse{Message: "Pong", Status: apitypes.PingStatusOK})
+	return nil
+}
